perf(pmtiles): whole-range reads and header-derived block alignment
Every read against the source - header, directory nodes, metadata, and
tile bytes - is now one exact range read into a pooled buffer,
decompressed from memory through a stream over the buffer itself. The
seekable-channel path that read byte by byte under an exact-range cache
is gone.

The reader wraps its input in a pass-through block aligner, declares
the first 16 KiB before parsing the header, and declares the precise
root directory, metadata, and leaf directory regions from the parsed
layout. With a cache under the supplied reader, one block fetch warms
the whole bootstrap; tile reads stay exact. Callers compose
CachingRangeReader.of(reader) and nothing else.

on-behalf-of: @camptocamp <info@camptocamp.com>